--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
     <title>Web Extension Frontend</title>
+    <style>
+      h1 {
+        margin: 20px
+      }
+    </style>
 </head>
 <body>
-  <h1>Nothing to see here</h1>
+  <h1>Hello World</h1>
 </body>
 </html>
