--- a/background/index.html
+++ b/background/index.html
@@ -5,6 +5,6 @@
     <title>Web Extension Background</title>
 </head>
 <body>
-    <script type="module" src="./background.ts"></script>
+    <script type="module" src="./index.ts"></script>
 </body>
 </html>
